# comparePlus

./: .gitignore  .travis.yml  CMakeLists.txt  Help.md  README.md  ReleaseNotes.txt  Translators.md  appveyor.yml  readme.txt  travis.yml  update.bat
.github/: FUNDING.yml
Notepad++/: config.xml  contextMenu.xml  langs.xml  readme.txt  session.xml  shortcuts.xml  stylers.xml
Notepad++/test/: file_A.c  file_B.c
loader/: Loader.cpp  Loader.rc  Loader.vcxproj  Loader.vcxproj.filters  compare.ini
projects/2005/: .cvsignore  Compare.sln  Compare.vcproj
projects/2005/Debug/: BuildLog.htm  Compare.res  mt.dep  vc80.idb
projects/2005/Debug 5.3.1/: BuildLog.htm  Compare.res  mt.dep  vc80.idb
projects/2005/Release/: BuildLog.htm  mt.dep  vc80.idb
projects/2008/: .cvsignore  Compare.sln  Compare.vcproj  xpm.h
projects/2008/Debug/: BuildLog.htm  mt.dep  vc90.idb
projects/2008/Release/: BuildLog.htm  mt.dep  vc90.idb
projects/2010/: Compare.sln  Compare.vcxproj  Compare.vcxproj.filters
projects/2013/: Compare.sln  Compare.vcxproj  Compare.vcxproj.filters  ComparePlus.sln  ComparePlus.vcxproj
projects/2015/: Compare.sln  Compare.vcxproj  Compare.vcxproj.filters  ComparePlus.sln  ComparePlus.vcxproj
projects/2017/: ComparePlus.sln  ComparePlus.vcxproj
projects/2022/: ComparePlus.vcxproj
projects/2026/: ComparePlus.vcxproj
projects/VC6/: ComparePlugin.dsp  ComparePlugin.dsw  ComparePlugin.sln  ComparePlugin.vcproj  makefile
res/: icons.txt
res/languages/: arabic.ini  chinese.ini  english.ini  esperanto.ini  french.ini  german.ini  hindi.ini  japanese.ini  portuguese.ini  russian.ini  spanish.ini
res/localization/: bulgarian.json  chinese.json  chineseSimplified.json  comparePlus-ukrainian.json  english.json  english_customizable.json  french.json  german.json  hebrew.json  korean.json  polish.json  russian.json  spanish.json  turkish.json  ukrainian.json
src/: ColorCombo.cpp  ColorCombo.h  ColorPopup.cpp  ColorPopup.h  Compare.aps  Compare.cpp  Compare.h  Compare.rc  CompareResource.h  Engine.cpp  Engine.h  LibHelpers.cpp  LibHelpers.h  Localization.cpp  Localization.h  NPPHelpers.cpp  NPPHelpers.h  NppHelpers.cpp  NppHelpers.h  ScmHelper.cpp  ScmHelper.h  Strings.cpp  Strings.h  Tools.cpp  Tools.h  UserSettings.cpp  UserSettings.h  icon_add_16.h  icon_moved_16.h  icon_sub_16.h  icon_warning_16.h  kcs_addons.h  resource.h
src/AboutDlg/: AboutDialog.cpp  AboutDialog.h  URLCtrl.cpp  URLCtrl.h
src/Common/: Docking.h  DockingDlgInterface.h  ImageListSet.cpp  ImageListSet.h  Notepad_plus_msgs.h  Notepad_plus_rc.h  PluginInterface.h  SciSubClassWrp.h  Scintilla.h  StaticDialog.cpp  StaticDialog.h  SysMsg.cpp  SysMsg.h  ToolBar.cpp  ToolBar.h  URLCtrl.cpp  URLCtrl.h  Window.h  dockingResource.h  menuCmdID.h  stdafx.cpp  stdafx.h
src/CompareOptionsDlg/: CompareOptionsDialog.cpp  CompareOptionsDialog.h
src/Engine/: Engine.cpp  Engine.h  diff.h  diff_types.h  fast_myers_diff.h  histogram_diff.h  myers_diff.h  types.h  varray.h
src/GitCommitDlg/: GitCommitDialog.cpp  GitCommitDialog.h
src/Icons/: icon_add.h  icon_add_16.h  icon_arrows.h  icon_changed.h  icon_diff.h  icon_diff_16.h  icon_moved.h  icon_moved_16.h  icon_moved_multiple.h  icon_moved_multiple_16.h  icon_sub.h  icon_sub_16.h
src/IgnoreRegexDlg/: IgnoreRegexDialog.cpp  IgnoreRegexDialog.h
src/LibGit2/: LibGit2Helper.cpp  LibGit2Helper.h
src/NavDlg/: NavDialog.cpp  NavDialog.h
src/NppAPI/: Docking.h  DockingDlgInterface.h  ImageListSet.cpp  ImageListSet.h  Notepad_plus_msgs.h  NppInternalDefines.h  PluginInterface.h  Sci_Position.h  Scintilla.h  StaticDialog.cpp  StaticDialog.h  ToolBar.cpp  ToolBar.h  Window.h  dockingResource.h  menuCmdID.h
src/NppAPI/DockingFeature/: Docking.h  DockingDlgInterface.h  StaticDialog.cpp  StaticDialog.h  Window.h  dockingResource.h
src/OptionDlg/: ColorCombo.cpp  ColorCombo.h  ColorPopup.h  OptionDialog.cpp  OptionDialog.h
src/ProgressDlg/: CProgress.cpp  CProgress.h  ProgressDlg.cpp  ProgressDlg.h
src/SQLite/: SqliteHelper.cpp  SqliteHelper.h
src/SettingsDlg/: ColorCombo.cpp  ColorCombo.h  ColorPopup.cpp  ColorPopup.h  SettingsDialog.cpp  SettingsDialog.h
src/VisualFiltersDlg/: VisualFiltersDialog.cpp  VisualFiltersDialog.h
src/XpmIcons/: icon_add_16.h  icon_diff_16.h  icon_moved_16.h  icon_sub_16.h  icon_warning_16.h
src/libgit2/: LibGit2Helper.cpp  LibGit2Helper.h
src/mba/: allocator.c  allocator.h  dbug.c  dbug.h  diff.c  diff.cpp  diff.h  hashmap.c  hashmap.h  iterator.h  msgno.c  msgno.h  suba.c  suba.h  varray.c  varray.h
src/sqlite/: SqliteHelper.cpp  SqliteHelper.h
test/: file_A.vhd  file_A_long.vhd  file_B.vhd  file_B_long.vhd
